<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            />

    </FrameLayout>


    <TextView
        style="@style/Text.Medium"
        android:id="@+id/tvItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_title"
        android:layout_toEndOf="@id/frame"
        android:layout_alignTop="@id/frame"/>

    <TextView
        style="@style/Text.Big"
        android:id="@+id/tvItemSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_subtitle"
        android:layout_toEndOf="@id/frame"
        android:layout_below="@id/tvItemTitle"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton"
        android:id="@+id/btnOption"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/logout"
        android:textSize="12sp"
        android:contentDescription="@string/content_desc_logout_button"
        app:icon="@drawable/icon_power"
        app:iconGravity="end"
        app:iconPadding="12dp"
        tools:ignore="RelativeOverlap,SmallSp" />



</RelativeLayout>