<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton"
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/content_desc_back_button"
        app:icon="@drawable/icon_back"
        app:iconSize="26dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnBack"
        android:layout_below="@id/btnBack"
        android:text="@string/test_title"
        android:textSize="20sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeaderSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@id/btnBack"
        android:layout_below="@id/tvHeaderTitle"
        android:text="@string/test_subtitle"
        android:textSize="18sp"
        android:textStyle="italic"/>

</RelativeLayout>