<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton"
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/content_desc_back_button"
        app:icon="@drawable/icon_back"
        app:iconSize="26dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton"
        android:id="@+id/btnOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="20dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/content_desc_back_button"
        app:icon="@drawable/icon_more"
        app:iconSize="26dp"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnBack"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@id/btnBack"
        android:text="@string/test_title" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/Text.Subtitle"
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/btnBack"
        android:layout_below="@id/tvTitle"
        android:layout_marginStart="5dp"
        android:text="@string/test_subtitle"/>

</RelativeLayout>